test_resources/lit_class/errors/test7.yr
@abstract
class Error over Exception {
    pub self () {}
}

class ErrorB over Exception {
    pub self () {}
}

@abstract
class A {
    pub self () {}

    pub fn foo (self)
        throws Error
        ;

}


class B over A {
    pub self () {}

    pub over foo (self)
        throws ErrorB
    {
        throw copy ErrorB ();
    }
}
